<resources>
    <string name="app_name">Samarth HMS</string>

    <!--    LAUNCH SCREEN-->
    <string name="launch_logo_description">Launch screen logo</string>
    <string name="developed_by_text">Developed By</string>
    <string name="developer_name_text">Sanket Patil</string>
    <string name="copyright_text">Copyright 2023 ©</string>

    <!--    LOGIN-->
    <string name="login_background_image_description">Login background wallpaper for logo</string>
    <string name="login_logo_image_description">Login logo</string>
    <string name="login_title_text">Login</string>
    <string name="role_select_title_text">Please select your role</string>
    <string name="username_title_text">Username</string>
    <string name="username_hint_text">Enter Username</string>
    <string name="password_title_text">Password</string>
    <string name="password_hint_text">Enter Password</string>
    <string name="login_button_text">Login</string>

    <!--    ADMIN DASHBOARD-->
    <string name="greeting_text">Good Morning,</string>
    <string name="admin_name_text">Dr. Sanket</string>
    <string name="patients_today_count_icon_image_description">Patients today icon</string>
    <string name="patients_today_count_number_text">10</string>
    <string name="patients_today_count_title_text">Patients\nToday</string>
    <string name="unattended_patients_count_icon_image_description">Unattended patients icon</string>
    <string name="unattended_patients_count_number_text">3</string>
    <string name="unattended_patients_count_title_text">Unattended\nPatients</string>
    <string name="admit_patients_count_icon_image_description">Admit patients icon</string>
    <string name="admit_patients_count_number_text">4</string>
    <string name="admit_patients_count_title_text">Admit\nPatients</string>
    <string name="patients_today_title_text">Patients Today</string>
    <string name="dashboard_update_button_text">Update</string>
    <string name="add_patient_floating_action_button_text">Add Patient</string>
    <string name="add_patient_floating_action_button_description">Add Patient Button</string>

    <!--    ADD PATIENT-->
    <string name="is_registered_patient_question_text">Registered Patient ?</string>
    <string name="find_by_patient_id_button_text">Find By Patient ID</string>
    <string name="find_by_name_button_text">Find By Name</string>
    <string name="find_by_contact_number_button_text">Find By Contact Number</string>
    <string name="or_title_text">Or</string>
    <string name="new_patient_question_text">New Patient ?</string>
    <string name="add_new_patient_button_text">Add New Patient</string>

    <!--    PATIENT INFO LAYOUT-->
    <string name="patient_info_patient_id_text">SBP00047</string>
    <string name="patient_info_patient_name_text">Sanket Patil</string>
    <string name="patient_info_patient_age_text">8y 2m</string>
    <string name="patient_info_patient_gender_text">Male, </string>
    <string name="patient_info_patient_address_text">Lakhmapur, Tal. Dindori</string>

    <!--    VISIT INFO LAYOUT-->
    <string name="visit_info_visit_time_text">8:00 AM</string>

    <!--    ADD NEW PATIENT, ADD PATIENT VISIT-->
    <string name="patient_id_title_text">Patient Id</string>
    <string name="patient_id_hint_text">Enter Patient Id</string>
    <string name="add_new_patient_first_name_title_text">First Name</string>
    <string name="add_new_patient_first_name_hint_text">Enter First Name</string>
    <string name="add_new_patient_middle_name_title_text">Middle Name</string>
    <string name="add_new_patient_middle_name_hint_text">Enter Middle Name</string>
    <string name="add_new_patient_last_name_title_text">Last Name</string>
    <string name="add_new_patient_last_name_hint_text">Enter Last Name</string>
    <string name="add_new_patient_gender_title_text">Gender</string>
    <string name="gender_male_radio_group_button_text">Male</string>
    <string name="gender_female_radio_group_button_text">Female</string>
    <string name="gender_hint_text">Enter Gender</string>
    <string name="date_of_birth_title_text">Date Of Birth</string>
    <string name="date_of_birth_hint_text">DDMMYYYY</string>
    <string name="age_title_text">Age (Mandatory if no DOB)</string>
    <string name="age_hint_text">11Y 5M</string>
    <string name="contact_number_title_text">Contact Number</string>
    <string name="contact_number_hint_text">9876543210</string>
    <string name="town_title_text">Town</string>
    <string name="town_hint_text">Enter Town</string>
    <string name="town_default_text">Dindori</string>
    <string name="taluka_title_text">Taluka</string>
    <string name="taluka_hint_text">Enter Taluka</string>
    <string name="taluka_default_text">Dindori</string>
    <string name="district_title_text">District</string>
    <string name="district_hint_text">Enter District</string>
    <string name="district_default_text">Nashik</string>
    <string name="charges_title_text">Charges</string>
    <string name="charges_hint_text">350</string>
    <string name="charges_default_text">0</string>
    <string name="save_patient_button_text">Save Patient</string>
    <string name="add_visit_button_text">Add Visit</string>

    <!--    GENERATE DISCHARGE CARD, EDIT DISCHARGE CARD-->
    <string name="address_title_text">Address</string>
    <string name="address_hint_text">Enter Address</string>
    <string name="address_default_text">Dindori, Tal. Dindori, Dist. Nashik</string>
    <string name="ipd_number_title_text">IPD Number</string>
    <string name="ipd_number_hint_text">53/23</string>
    <string name="weight_title_text">Weight (in kgs)</string>
    <string name="weight_hint_text">Enter Weight</string>
    <string name="height_title_text">Height (in cms)</string>
    <string name="date_of_admission_title_text">Date of Admission</string>
    <string name="time_of_admission_title_text">Time of Admission</string>
    <string name="time_of_admission_text">@string/time_of_admission_hint_text</string>
    <string name="time_of_admission_hint_text">09:12 am</string>
    <string name="date_of_discharge_title_text">Date of Discharge</string>
    <string name="time_of_discharge_title_text">Time of Discharge</string>
    <string name="time_of_discharge_text">@string/time_of_discharge_hint_text</string>
    <string name="time_of_discharge_hint_text">@string/time_of_admission_hint_text</string>
    <string name="diagnosis_title_text">Diagnosis</string>
    <string name="diagnosis_hint_text">Enter Diagnosis</string>
    <string name="patient_history_title_text">History Of Present Illness</string>
    <string name="patient_history_hint_text">Enter Patient History</string>
    <string name="patient_history_default_text"> </string>
    <string name="past_history_title_text">Past H/O</string>
    <string name="past_history_hint_text">Enter Past History</string>
    <string name="past_history_default_text">No H/O of hospitalization . No major illness in past.</string>
    <string name="family_history_title_text">Family H/O</string>
    <string name="family_history_hint_text">Enter Family History</string>
    <string name="family_history_default_text">Not significant. No family H/o of asthma.</string>
    <string name="investigations_title_text">Investigations</string>
    <string name="investigations_hint_text">Enter Investigations</string>
    <string name="investigations_default_text">22/3/23—hb-10.2, WBC –8000 Platelet count-327000, CRP- 7.0, Stool and
microscopic reports attached with discharge card</string>
    <string name="course_title_text">Course</string>
    <string name="medications_title_text">Medications on Discharge</string>
    <string name="advice_title_text">Advice</string>
    <string name="generate_card_button_text">Generate Card</string>

    <!--    GENERATE BILL, EDIT BILL-->
    <string name="bill_number_title_text">Bill Number</string>
    <string name="bill_number_hint_text">@string/ipd_number_hint_text</string>
    <string name="treatment_charges_title_text">Treatment Charges</string>
    <string name="management_charges_title_text">Management Charges</string>
    <string name="other_charges_title_text">Other Charges</string>
    <string name="bill_total_title_text">Total</string>
    <string name="bill_total_default_text">Rs. 10,000</string>
    <string name="generate_bill_button_text">Generate Bill</string>

    <!--    FIND PATIENT BY-->
    <string name="find_patient_by_patient_id_title_text">@string/patient_id_title_text</string>
    <string name="find_patient_by_first_name_title_text">@string/add_new_patient_first_name_title_text</string>
    <string name="find_patient_by_first_name_hint_text">@string/add_new_patient_first_name_hint_text</string>
    <string name="find_patient_by_middle_name_title_text">@string/add_new_patient_middle_name_title_text</string>
    <string name="find_patient_by_middle_name_hint_text">@string/add_new_patient_middle_name_hint_text</string>
    <string name="find_patient_by_last_name_title_text">@string/add_new_patient_last_name_title_text</string>
    <string name="find_patient_by_last_name_hint_text">@string/add_new_patient_last_name_hint_text</string>
    <string name="find_patient_by_contact_number_title_text">@string/contact_number_title_text</string>
    <string name="find_patient_by_contact_number_hint_text">@string/contact_number_hint_text</string>
    <string name="find_patient_by_patient_id_prefix_text">SBP</string>
    <string name="find_patient_by_patient_id_suffix_text">00000</string>
    <string name="find_patient_by_result_found_text">No Result Found</string>
    <string name="find_patient_by_search_button_text">Search</string>

    <!--    PATIENTS TODAY-->
    <string name="patients_today_result_count_title_text">8 Patients</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    BUTTONS-->
    <string name="save_button_text">Save</string>
    <string name="generate_button_text">Generate</string>
    <string name="edit_button_text">Edit</string>
    <string name="delete_button_text">Delete</string>
    <string name="add_button_text">Add</string>

</resources>