<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AdminDashboardFragment">

    <View
        android:id="@+id/dashboard_background"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dashboard_background_height"
        android:background="@drawable/admin_dashboard_background"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/greeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/greeting_margin_start"
        android:layout_marginTop="@dimen/greeting_margin_top"
        android:text="@string/greeting_text"
        android:textColor="@color/white"
        android:textSize="@dimen/greeting_text_size"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/admin_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/admin_name_margin_start"
        android:text="@string/admin_name_text"
        android:textColor="@color/white"
        android:textSize="@dimen/admin_name_text_size"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/greeting" />

    <LinearLayout
        android:id="@+id/patients_today_count"
        android:layout_width="@dimen/admin_dashboard_count_background_width"
        android:layout_height="@dimen/admin_dashboard_count_background_height"
        android:layout_marginTop="@dimen/admin_dashboard_count_margin_top"
        android:background="@drawable/patients_today_count_background"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/unattended_patients_count"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/dashboard_background" >
        
        <ImageView
            android:id="@+id/patients_today_count_icon"
            android:layout_width="@dimen/admin_dashboard_count_icon_image_width"
            android:layout_height="@dimen/admin_dashboard_count_icon_image_height"
            android:src="@drawable/icon_patients_today_count"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/admin_dashboard_count_icon_image_margin_top"
            android:alpha="0.8"
            android:contentDescription="@string/patients_today_count_icon_image_description"/>

        <TextView
            android:id="@+id/patients_today_count_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patients_today_count_number_text"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="@dimen/admin_dashboard_count_number_text_size"
            android:layout_marginTop="@dimen/admin_dashboard_count_number_margin_top"
            android:paddingTop="@dimen/admin_dashboard_count_number_padding_top"
            android:paddingBottom="@dimen/admin_dashboard_count_number_padding_bottom"/>

        <TextView
            android:id="@+id/patients_today_count_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patients_today_count_title_text"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="@dimen/admin_dashboard_count_title_text_size"/>
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/unattended_patients_count"
        android:layout_width="@dimen/admin_dashboard_count_background_width"
        android:layout_height="@dimen/admin_dashboard_count_background_height"
        android:layout_marginTop="@dimen/admin_dashboard_count_margin_top"
        android:background="@drawable/unattended_patients_count_background"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/admit_patients_count"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/patients_today_count"
        app:layout_constraintTop_toTopOf="@id/dashboard_background" >

        <ImageView
            android:id="@+id/unattended_patients_count_icon"
            android:layout_width="@dimen/admin_dashboard_count_icon_image_width"
            android:layout_height="@dimen/admin_dashboard_count_icon_image_height"
            android:src="@drawable/icon_unattended_patients_count"
            app:tint="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/admin_dashboard_count_icon_image_margin_top"
            android:alpha="0.8"
            android:contentDescription="@string/unattended_patients_count_icon_image_description"/>

        <TextView
            android:id="@+id/unattended_patients_count_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unattended_patients_count_number_text"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="@dimen/admin_dashboard_count_number_text_size"
            android:layout_marginTop="@dimen/admin_dashboard_count_number_margin_top"
            android:paddingTop="@dimen/admin_dashboard_count_number_padding_top"
            android:paddingBottom="@dimen/admin_dashboard_count_number_padding_bottom"/>

        <TextView
            android:id="@+id/unattended_patients_count_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unattended_patients_count_title_text"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="@dimen/admin_dashboard_count_title_text_size"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/admit_patients_count"
        android:layout_width="@dimen/admin_dashboard_count_background_width"
        android:layout_height="@dimen/admin_dashboard_count_background_height"
        android:layout_marginTop="@dimen/admin_dashboard_count_margin_top"
        android:background="@drawable/admit_patients_count_background"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/unattended_patients_count"
        app:layout_constraintTop_toTopOf="@id/dashboard_background" >

        <ImageView
            android:id="@+id/admit_patients_count_icon"
            android:layout_width="@dimen/admin_dashboard_count_icon_image_width"
            android:layout_height="@dimen/admin_dashboard_count_icon_image_height"
            android:src="@drawable/icon_admit_patients_count"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/admin_dashboard_count_icon_image_margin_top"
            android:alpha="0.8"
            android:contentDescription="@string/admit_patients_count_icon_image_description"/>

        <TextView
            android:id="@+id/admit_patients_count_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admit_patients_count_number_text"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="@dimen/admin_dashboard_count_number_text_size"
            android:layout_marginTop="@dimen/admin_dashboard_count_number_margin_top"
            android:paddingTop="@dimen/admin_dashboard_count_number_padding_top"
            android:paddingBottom="@dimen/admin_dashboard_count_number_padding_bottom"/>

        <TextView
            android:id="@+id/admit_patients_count_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admit_patients_count_title_text"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="@dimen/admin_dashboard_count_title_text_size"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>