<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/info_block"
        android:layout_width="match_parent"
        android:layout_height="@dimen/patient_info_layout_info_block_height"
        android:background="@drawable/patient_info_background_red"
        android:elevation="@dimen/patient_info_layout_info_block_elevation"
        android:layout_marginStart="@dimen/patient_info_layout_info_block_horizontal_margin"
        android:layout_marginEnd="@dimen/patient_info_layout_info_block_horizontal_margin"
        android:layout_marginTop="@dimen/patient_info_layout_info_block_margin_top"
        android:layout_marginBottom="@dimen/patient_info_layout_info_block_margin_bottom"
        android:paddingTop="@dimen/patient_info_layout_info_block_vertical_padding"
        android:paddingBottom="@dimen/patient_info_layout_info_block_vertical_padding"
        android:paddingStart="@dimen/patient_info_layout_info_block_horizontal_padding"
        android:paddingEnd="@dimen/patient_info_layout_info_block_horizontal_padding"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/patient_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient_info_patient_id_text"
            android:textStyle="bold"
            android:textColor="@color/dark_blue_theme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="23 Aug 2023"
            android:textStyle="bold"
            android:textColor="@color/dark_blue_theme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/patient_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient_info_patient_name_text"
            android:textSize="@dimen/patient_info_layout_patient_name_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/patient_id"/>

        <TextView
            android:id="@+id/visit_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visit_info_visit_time_text"
            android:textSize="@dimen/visit_info_visit_time_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/patient_id"/>

        <TextView
            android:id="@+id/patient_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient_info_patient_gender_text"
            android:textSize="@dimen/patient_info_layout_patient_gender_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/patient_name"/>

        <TextView
            android:id="@+id/patient_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient_info_patient_age_text"
            android:textSize="@dimen/patient_info_layout_patient_age_text_size"
            app:layout_constraintStart_toEndOf="@id/patient_gender"
            app:layout_constraintTop_toBottomOf="@id/patient_name"/>

        <TextView
            android:id="@+id/patient_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient_info_patient_address_text"
            android:textSize="@dimen/patient_info_layout_patient_address_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/patient_name"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>